--- a/viewer.html
+++ b/viewer.html
@@ -205,25 +205,81 @@
                 mozallowfullscreen="true" webkitallowfullscreen="true">
             </iframe>
 
-            <!-- Universal AR Button -->
-            <button id="ar-btn"
-                class="absolute top-4 right-4 bg-brand text-black font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:scale-105 transition-transform z-20">
-                <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6h-8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9" />
-                </svg>
-                <span id="ar-btn-text">View in AR</span>
-            </button>
+            <!-- Header Controls -->
+            <div class="absolute top-4 right-4 z-50 flex items-center space-x-3">
+                <!-- About Model Button -->
+                <button id="about-model-btn"
+                    class="bg-white/10 backdrop-blur-md text-white border border-white/20 font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:bg-white/20 transition-all">
+                    <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                    <span class="hidden sm:inline">About Model</span>
+                </button>
+                
+                <!-- Universal AR Button -->
+                <button id="ar-btn"
+                    class="bg-brand text-black font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:scale-105 transition-transform">
+                    <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6h-8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9" />
+                    </svg>
+                    <span id="ar-btn-text">View in AR</span>
+                </button>
 
-            <!-- About Model Button -->
-            <button id="about-model-btn"
-                class="absolute top-4 right-44 bg-white/10 backdrop-blur-md text-white border border-white/20 font-bold px-4 py-2 rounded-full flex items-center shadow-lg hover:bg-white/20 transition-all z-20">
-                <svg class="w-5 h-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                </svg>
-                <span>About Model</span>
-            </button>
+                 <!-- Chat Button -->
+                <button id="chat-toggle"
+                    class="w-10 h-10 sm:w-12 sm:h-12 rounded-full bg-gradient-to-br from-brand to-brand-accent text-white shadow-lg hover:shadow-2xl transform hover:scale-110 transition-all duration-300 flex items-center justify-center">
+                     <svg class="w-5 h-5 sm:w-6 sm:h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z">
+                        </path>
+                    </svg>
+                </button>
+            </div>
+
+             <!-- Chat Window (Absolute to Screen, Top Right alignment) -->
+            <div id="chat-window"
+                class="hidden fixed top-20 right-4 w-80 sm:w-96 bg-gray-900 border border-brand/30 rounded-2xl shadow-2xl flex flex-col max-h-[80vh] z-50">
+                <!-- Header -->
+                <div class="bg-gradient-to-r from-brand/20 to-brand-accent/20 p-4 rounded-t-2xl border-b border-brand/20">
+                    <h3 class="text-lg font-bold text-white">3D Model Assistant</h3>
+                    <p class="text-xs text-gray-400">Ask about our 3D models</p>
+                </div>
+
+                <!-- Messages Container -->
+                <div id="chat-messages" class="flex-1 overflow-y-auto p-4 space-y-4">
+                    <div class="flex gap-3">
+                        <div class="w-8 h-8 rounded-full bg-brand/20 flex items-center justify-center flex-shrink-0">
+                            <span class="text-brand text-sm">🤖</span>
+                        </div>
+                        <div class="bg-gray-800 rounded-lg p-3 max-w-xs">
+                            <p class="text-sm text-gray-300">Hi! I'm your 3D Learning Hub assistant. Ask me anything about
+                                our models, like "Tell me about the Jet Engine" or "What is DNA?"</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Input Area -->
+                <div class="border-t border-brand/20 p-4 space-y-2">
+                    <div class="flex gap-2">
+                        <input id="chat-input" type="text" placeholder="Ask about 3D models..."
+                            class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-brand/50 transition-colors">
+                        <button id="chat-send"
+                            class="bg-brand text-black rounded-lg px-4 py-2 font-semibold hover:bg-brand/90 transition-colors">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div id="chat-loading" class="hidden flex items-center gap-2 text-xs text-gray-400">
+                        <span class="inline-block w-2 h-2 bg-brand rounded-full animate-bounce"></span>
+                        <span>Thinking...</span>
+                    </div>
+                </div>
+            </div>
+
 
             <!-- AR Help Toast -->
             <div id="ar-toast" class="hidden"></div> <!-- Deprecated, replaced by Guide -->
@@ -290,19 +346,19 @@
         <div id="detail-modal"
             class="absolute inset-0 z-50 flex items-center justify-center p-4 bg-black/60 backdrop-blur-sm opacity-0 pointer-events-none transition-all duration-300">
             <div
-                class="glass-panel max-w-sm w-full p-6 rounded-2xl transform scale-95 transition-transform duration-300">
-                <div class="flex justify-between items-start mb-4">
-                    <h3 id="modal-title" class="text-xl font-bold text-brand">Detail Title</h3>
-                    <button id="close-modal" class="text-gray-400 hover:text-white transition-colors">
+                class="glass-panel w-[95%] max-w-2xl max-h-[85vh] overflow-y-auto p-6 md:p-8 rounded-2xl transform scale-95 transition-transform duration-300">
+                <div class="flex justify-between items-start mb-6 sticky top-0 bg-[#0B0F19]/90 backdrop-blur-sm -mx-6 -mt-6 p-6 border-b border-white/5 z-10">
+                    <h3 id="modal-title" class="text-2xl font-bold text-brand">Detail Title</h3>
+                    <button id="close-modal" class="text-gray-400 hover:text-white transition-colors bg-white/5 rounded-full p-2 hover:bg-white/10">
                         <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M6 18L18 6M6 6l12 12" />
                         </svg>
                     </button>
                 </div>
-                <p id="modal-desc" class="text-gray-300 text-sm leading-relaxed">
-                    Detail description goes here.
-                </p>
+                <div id="modal-desc" class="text-gray-300 text-base leading-relaxed space-y-4">
+                    <p>Detail description goes here.</p>
+                </div>
             </div>
         </div>
 
@@ -324,7 +380,7 @@
                 </button>
             </div>
 
-            <p class="text-gray-400 text-sm leading-relaxed mb-4" id="info-desc">
+            <p class="text-gray-400 text-sm leading-relaxed mb-4 max-h-32 overflow-y-auto pr-2" id="info-desc">
                 Description...
             </p>
 
@@ -339,55 +395,6 @@
         </div>
 
     </main>
-
-    <!-- Chatbot Widget -->
-    <div id="chatbot-widget" class="fixed bottom-4 right-4 sm:bottom-6 sm:right-6 z-50">
-        <!-- Chat Button -->
-        <button id="chat-toggle" 
-            class="w-14 h-14 sm:w-16 sm:h-16 rounded-full bg-gradient-to-br from-brand to-brand-accent text-white shadow-lg hover:shadow-2xl transform hover:scale-110 transition-all duration-300 flex items-center justify-center">
-            <svg class="w-6 h-6 sm:w-7 sm:h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
-            </svg>
-        </button>
-
-        <!-- Chat Window -->
-        <div id="chat-window" class="hidden absolute bottom-20 right-0 w-80 sm:w-96 bg-gray-900 border border-brand/30 rounded-2xl shadow-2xl flex flex-col max-h-96 sm:max-h-[500px]">
-            <!-- Header -->
-            <div class="bg-gradient-to-r from-brand/20 to-brand-accent/20 p-4 rounded-t-2xl border-b border-brand/20">
-                <h3 class="text-lg font-bold text-white">3D Model Assistant</h3>
-                <p class="text-xs text-gray-400">Ask about our 3D models</p>
-            </div>
-
-            <!-- Messages Container -->
-            <div id="chat-messages" class="flex-1 overflow-y-auto p-4 space-y-4">
-                <div class="flex gap-3">
-                    <div class="w-8 h-8 rounded-full bg-brand/20 flex items-center justify-center flex-shrink-0">
-                        <span class="text-brand text-sm">🤖</span>
-                    </div>
-                    <div class="bg-gray-800 rounded-lg p-3 max-w-xs">
-                        <p class="text-sm text-gray-300">Hi! I'm your 3D Learning Hub assistant. Ask me anything about our models, like "Tell me about the Jet Engine" or "What is DNA?"</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Input Area -->
-            <div class="border-t border-brand/20 p-4 space-y-2">
-                <div class="flex gap-2">
-                    <input id="chat-input" type="text" placeholder="Ask about 3D models..."
-                        class="flex-1 bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-sm text-white placeholder-gray-500 focus:outline-none focus:border-brand/50 transition-colors">
-                    <button id="chat-send" class="bg-brand text-black rounded-lg px-4 py-2 font-semibold hover:bg-brand/90 transition-colors">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
-                        </svg>
-                    </button>
-                </div>
-                <div id="chat-loading" class="hidden flex items-center gap-2 text-xs text-gray-400">
-                    <span class="inline-block w-2 h-2 bg-brand rounded-full animate-bounce"></span>
-                    <span>Thinking...</span>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script src="js/main.js"></script>
     <script src="js/chatbot.js"></script>
